crates/viewer/re_blueprint_tree/tests/snapshots/view_structure_test__query-t-multiple_proj.snap
---
source: crates/viewer/re_blueprint_tree/tests/view_structure_test.rs
expression: blueprint_tree_data
---
root_container:
  id:
    id: "<container-id>"
  name:
    Placeholder: Grid
  kind: Grid
  visible: true
  default_open: true
  children:
    - View:
        id:
          id: 0864e1b8-cec4-1b82-5b17-b9d628b8f4fe
        class_identifier: 3D
        name:
          Placeholder: center/way
        visible: true
        default_open: true
        origin_tree: ~
        projection_trees:
          - kind: DataResult
            entity_path:
              - path
              - to
              - right
            visible: true
            view_id:
              id: 0864e1b8-cec4-1b82-5b17-b9d628b8f4fe
            label: right
            highlight_sections:
              - start: 4
                end: 5
            default_open: true
            children: []
          - kind: DataResult
            entity_path:
              - path
              - to
              - the
            visible: true
            view_id:
              id: 0864e1b8-cec4-1b82-5b17-b9d628b8f4fe
            label: the
            highlight_sections:
              - start: 0
                end: 1
            default_open: true
            children:
              - kind: DataResult
                entity_path:
                  - path
                  - to
                  - the
                  - void
                visible: true
                view_id:
                  id: 0864e1b8-cec4-1b82-5b17-b9d628b8f4fe
                label: void
                highlight_sections: []
                default_open: true
                children: []
