crates/viewer/re_blueprint_tree/tests/snapshots/view_structure_test__query-t-unknown_origin.snap
---
source: crates/viewer/re_blueprint_tree/tests/view_structure_test.rs
expression: blueprint_tree_data
---
root_container:
  id:
    id: "<container-id>"
  name:
    Placeholder: Grid
  kind: Grid
  visible: true
  default_open: true
  children:
    - View:
        id:
          id: 0864e1b8-cec4-1b82-5b17-b9d628b8f4fe
        class_identifier: 3D
        name:
          Placeholder: wrong/path
        visible: true
        default_open: true
        origin_tree:
          kind: EmptyOriginPlaceholder
          entity_path:
            - wrong
            - path
          visible: false
          view_id:
            id: 0864e1b8-cec4-1b82-5b17-b9d628b8f4fe
          label: path
          highlight_sections:
            - start: 2
              end: 3
          default_open: false
          children: []
        projection_trees: []
